# Memalc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: memalc.h  pthreadsem.h
src/: CMakeLists.txt  memalc.c
